# RITXI

./: .gitignore
OTROS/ahootsa_v0_3_6_ollama_chat_logging_fix/: AHOOTSA_VERSION.txt  pyproject.toml
OTROS/ahootsa_v0_3_6_ollama_chat_logging_fix/docs/: CAMBIO_v0_3_1_CHAT_UI.md  CAMBIO_v0_3_2_PUERTO_7862.md  EXPLICACION_WRAPPER_DESKTOP.md  FIX_PERFILES_DUPLICADOS_v0_2_6.md  PERFILES_Y_LOGOS_AHOOTSA.md
ahootsa_v0_4_10_base_instalacion_desde_cero/: AHOOTSA_VERSION.txt  INSTALAR_AHOOTSA_COMPLETO.ps1  README_AHOOTSA_REALTIME_OLLAMA.md  pyproject.toml
ahootsa_v0_4_10_base_instalacion_desde_cero/docs/: ARQUITECTURA_BASE_ESTABLE_ASK_OLLAMA.md  CAMBIOS_v0_4_10.md  CAMBIOS_v0_4_3.md  CAMBIOS_v0_4_4.md  CAMBIOS_v0_4_6.md  INSTALACION_DESDE_CERO.md
ahootsa_v0_4_10_base_instalacion_desde_cero/src/ahootsa_realtime_ollama_desktop_app/: main.py
ahootsa_v0_4_10_base_instalacion_desde_cero/src/ahootsa_realtime_ollama_desktop_app.egg-info/: PKG-INFO
ahootsa_v0_4_21_recuperar_ia_local_ollama/: AHOOTSA_VERSION.txt  DIAGNOSTICAR_ASK_OLLAMA.ps1  INSTALAR_AHOOTSA_COMPLETO.ps1  PROBAR_IA_LOCAL_AHOOTSA.ps1  README_AHOOTSA_REALTIME_OLLAMA.md  pyproject.toml
ahootsa_v0_4_21_recuperar_ia_local_ollama/docs/: CAMBIOS_v0_4_12.md  CAMBIOS_v0_4_18.md  CAMBIOS_v0_4_2.md  CAMBIOS_v0_4_21.md  DESKTOP_INTEGRADO_NO_ABRIR_7860.md  FIX_MODEFILE_OLLAMA.md  INSTALACION_DESDE_CERO.md  INSTALADOR_FORZADO_TRES_PYTHON.md
ahootsa_v0_4_21_recuperar_ia_local_ollama/scripts/windows/: 00_INSTALACION_COMPLETA_DESDE_CERO.ps1  00_crear_modelo_ollama_ahootsa.ps1  05_instalar_metadata_desktop.ps1  09_probar_ollama_api_ahootsa.ps1  11_reparar_perfil_ask_ollama.ps1
ahootsa_v0_4_21_recuperar_ia_local_ollama/src/ahootsa_realtime_ollama_desktop_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ritxi_fastapi_v5_9_60_model_latency_diagnostics/: .env.example  0_INSTALAR_MODELOS_OLLAMA.cmd  1_INSTALAR_RITXI.cmd  2_INICIAR_DAEMON_RITXI.ps1  3_RUN_RITXI.cmd  3_RUN_RITXI.ps1  5_INSTALAR_E_INICIAR_DAEMON_RITXI.cmd  README.md  pyproject.toml
ritxi_fastapi_v5_9_60_model_latency_diagnostics/app/: main.py
ritxi_fastapi_v5_9_60_model_latency_diagnostics/docs/: CLASIFICACION_INTERACCION_FICHAS_v5_9_50.md  MANUAL_CODIGO_RITXI.md  REVISION_ACTIVIDADES_TURNOS_v5_9_49.md  audio_huggingface_v5_6.md  diagnostico_micro_v4_2.md  diagnostico_micro_v4_3.md  diagnostico_micro_v4_4.md  instalacion_uv_windows.md  logs_y_diagnostico.md  prueba_conversacion_tiempo_real.md  revision_app_original.md  solucion_error_acceso_denegado_uv.md  solucion_recarga_venv_comtypes.md  v3_architecture.md  v4_architecture.md  v5_1_emociones_pollen.md  v5_2_panel_acciones_ampliado.md  v5_3_daemon_integrado_y_scripts.md  v5_5_daemon_robusto.md  v5_8_2_arranque_windows.md  v5_8_3_lanzador_windows.md  v5_8_4_lanzador_windows_simple.md  v5_8_5_logs_siempre_creados.md  v5_8_6_scripts_123.md  v5_8_7_kill_daemon_port.md  v5_8_8_branding_gaude.md  v5_8_9_step3_no_batch_prompt.md  v5_8_actividades_dinamicas.md  v5_9_10_micro_warmup_fast.md  v5_9_11_micro_permission_activity_prompt.md  v5_9_12_micro_direct_relisten_fix.md  v5_9_13_activity_relisten_loop_fix.md  v5_9_14_talk_now_button_fix.md  v5_9_15_unlock_text_mic_fix.md  v5_9_16_stt_vocabulary_fix.md  v5_9_17_language_turn_fix.md  v5_9_18_turn_recovery_fix.md  v5_9_19_always_on_micro_manager.md  v5_9_20_micro_direct_no_echo_gate.md  v5_9_21_stt_repetition_filter.md  (+22 more)
ritxi_fastapi_v5_9_60_model_latency_diagnostics/logs/: session_20260624_181437_pid5639.jsonl  session_20260624_182937_pid8156.jsonl  session_20260625_070018_pid13020.jsonl
ritxi_fastapi_v5_9_60_model_latency_diagnostics/profiles/: demo_user.json
ritxi_fastapi_v5_9_60_model_latency_diagnostics/tests/: test_app.py  test_mock_llm.py
(+684 files in other folders)
